[gd_scene load_steps=9 format=3 uid="uid://cw8804xcu3lh6"]

[ext_resource type="PackedScene" uid="uid://g5immh507xlx" path="res://Characters/captain_avery.glb" id="1_fxcms"]
[ext_resource type="Script" path="res://Characters/capybara.gd" id="2_agc7q"]
[ext_resource type="PackedScene" uid="uid://ctxky55yqjgsb" path="res://Characters/capybara_model.tscn" id="3_mqblx"]
[ext_resource type="PackedScene" uid="uid://bj8f44agdkdp5" path="res://Models/arrow.tscn" id="4_34p6u"]
[ext_resource type="Script" path="res://CameraController.gd" id="5_t2cth"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dpu64"]
radius = 12.9827

[sub_resource type="Animation" id="Animation_1y2am"]
resource_name = "breathe"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SeaLion_Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.06, 0.94, 1.06), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tcow4"]
_data = {
"breathe": SubResource("Animation_1y2am")
}

[node name="capybara" instance=ExtResource("1_fxcms")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
script = ExtResource("2_agc7q")

[node name="SeaLion_Mesh" parent="." index="0"]
transform = Transform3D(1.01779, 0, 0, 0, 0.982212, 0, 0, 0, 1.01779, 0, 0, 0)
visibility_range_end = 150.0
visibility_range_end_margin = 10.0
visibility_range_fade_mode = 1
mesh = null

[node name="Capybara" parent="SeaLion_Mesh" index="0" instance=ExtResource("3_mqblx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Arrow" parent="." index="1" instance=ExtResource("4_34p6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.15676, 1.08482)

[node name="Area3D" type="Area3D" parent="." index="2"]
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.17952)
shape = SubResource("SphereShape3D_dpu64")

[node name="CameraController" type="RemoteTransform3D" parent="." index="3"]
transform = Transform3D(0.959805, 0.160582, -0.230189, 0, 0.820152, 0.572146, 0.280667, -0.549149, 0.787186, -2.68829, 8.57824, 12.4231)
script = ExtResource("5_t2cth")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_tcow4")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
